<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carbonizr</string>
    <string name="title">Carbonizr</string>
    <string name="carbonizr_shop_browser">Carbonizr Shop</string>

    <string name="navbar_image_content_description">Navigation Bar background image</string>
    <string name="drawer_open_desc">open</string>
    <string name="drawer_close_desc">close</string>
    <string name="empty_home_page">Please select an image.</string>
    <string name="image_content_description">Cropped Image</string>
    <string name="button_3d_view">3D</string>
    <string name="button_purchase">Buy</string>
    <string name="add_to_cart_text">Added to Cart!</string>
    <string name="clear_string">clear</string>
    <string name="cart_string">Cart</string>

    <string name="facebook_app_id">1587459411581791</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="question_1">How are the 3D models created?</string>
    <string name="answer_1">The models are generated by analyzing a gray-scale version of the image and then adjusting the heights based on the intensity of that pixel. Lighter pixels are elevated within the model and vice versa for the darker pixels.</string>
    <string name="question_2">Can I invert/emboss/engrave the model?</string>
    <string name="answer_2">Since the models are generated based on the color intensity of the gray-scale image, you can simply edit your picture to invert the colors. That way, you can have full control over the result of what your models will turn out to be.</string>
    <string name="question_3">What kind of materials can I print my model in?</string>
    <string name="answer_3">Shapeways has more than 60 different materials that you can potentially print your model in. However, not all of these materials are usually compatible for printing your Carbonized model. This is often due to size restrictions.</string>
    <string name="questions_4">What can I do to make the model have more details in a certain area?</string>
    <string name="answer_4">You can edit the picture before submitting it for Carbonization. Generally, you will want to blur out the areas of the picture you aren\'t interested in and increase the contrast in the areas you want to have more detail in.</string>
    <string name="question_5">Why does it say \"Not for Sale\"?</string>
    <string name="answer_5">All available materials to purchase should be available after about 10 seconds when you first upload your model.</string>
    <string name="question_6">Why can\'t I see the pictures of the model materialized?</string>
    <string name="answer_6">Those pictures take a bit more time to generate. They should be available after 10-20 minutes.</string>
    <string name="question_7">How can I report a bug or request a feature?</string>
    <string name="answer_7">Email me</string>
</resources>
